# FlashForgeAdventurer5MAPI

./: Dockerfile  LICENSE  README.md  pyproject.toml
adventurer5m/: app.py  exceptions.py  tests.py
adventurer5m/api/: __init__.py  api.py  commands.py  commands_base.py  transport.py
adventurer5m/gui/: __init__.py  gui.py
adventurer5m/static/: code.js  style.css
adventurer5m/templates/: index_en.html  index_ru.html
doc/: en.md  ru.md
