[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flash-forge-adenturer-5m-api"
version = "0.1"
dependencies = [
  "flask==3.0.2",
]
requires-python = ">=3.8"
authors = [
  {name = "Igor Zyktin", email = "nicord@yandex.ru"},
]
description = "Unofficial API + GUI for Adventurer 5M 3d printer series"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["3d print", "flash forge", "adventurer 5m"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/IgorZyktin/FlashForgeAdventurer5MAPI"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
